[tool.poetry]
name = "fluff"
version = "0.1.0"
description = ""
authors = ["NoSoundLeR <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
aioredis = "^1.3.1"
uvicorn = "^0.13.3"
gunicorn = "^20.0.4"
uvloop = {version = "^0.14.0", markers = "sys_platform == 'linux'"}
orjson = "^3.4.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
isort = "^5.7.0"
autoflake = "^1.4"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
mypy = "^0.800"
black = "^20.8b1"
httpx = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
